# API_diplom

./: .gitignore  README.md  path.py  pyproject.toml
API_autotest_diplom/utils/: path.py  requests_helper.py
reqres_in_project_tests/utils/: path.py  requests_helper.py
reqresin_project_tests/utils/: path.py  requests_helper.py
tests/: conftest.py  test_regres_in_login.py  test_regres_in_registration.py  test_regres_in_resource.py  test_regres_in_users.py  test_reqres_in_login.py  test_reqres_in_registration.py  test_reqres_in_resource.py  test_reqres_in_users.py
